[gd_scene load_steps=32 format=2]

[ext_resource path="res://Game/Maps/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Creator/Textures/Icons/BigButtons-2.png (2).png" type="Texture" id=2]
[ext_resource path="res://Game/Creator/Textures/Icons/SmallButtons-4.png (1).png" type="Texture" id=3]
[ext_resource path="res://Game/Menus/Textures/KeyKeyboardCancel.png" type="Texture" id=4]
[ext_resource path="res://Game/Creator/Textures/Icons/SmallButtons-3.png (1).png" type="Texture" id=5]
[ext_resource path="res://Game/Creator/Textures/Icons/SmallButtons-2.png (1).png" type="Texture" id=6]
[ext_resource path="res://Game/Creator/Textures/Icons/SmallButtons-6.png.png" type="Texture" id=7]
[ext_resource path="res://Game/Creator/Textures/Icons/SmallButtons-5.png.png" type="Texture" id=8]
[ext_resource path="res://Game/Creator/Textures/Icons/BigButtons-1.png (2).png" type="Texture" id=9]
[ext_resource path="res://Game/Creator/Textures/Icons/ItemsBar-1.png (2).png" type="Texture" id=10]
[ext_resource path="res://Game/Creator/Textures/ItemBarRightButton.png" type="Texture" id=11]
[ext_resource path="res://Game/Creator/Textures/ItemsBarLeftButton.png" type="Texture" id=12]
[ext_resource path="res://Game/Creator/Textures/Icons/ColorBlockIcon.png" type="Texture" id=13]
[ext_resource path="res://Game/Creator/Textures/ItemBoxSelected.png" type="Texture" id=14]
[ext_resource path="res://Game/Maps/Textures/BackgroundGarden2.png" type="Texture" id=16]
[ext_resource path="res://Game/Maps/Textures/BackgroundGarden1.png" type="Texture" id=17]
[ext_resource path="res://Game/Maps/Textures/BackgroundGarden3.png" type="Texture" id=18]
[ext_resource path="res://Game/Creator/Textures/Grid.png" type="Texture" id=19]
[ext_resource path="res://Game/Creator/Textures/Icons/ColorSwitchIcon.png" type="Texture" id=20]
[ext_resource path="res://Game/Creator/Textures/Icons/PowerBoxIcon.png" type="Texture" id=21]
[ext_resource path="res://Game/Creator/Textures/Icons/SpikeIcon.png" type="Texture" id=22]
[ext_resource path="res://Game/Creator/Textures/Icons/TrampolineIcon.png" type="Texture" id=23]
[ext_resource path="res://Game/Creator/Textures/Icons/WaterIcon.png" type="Texture" id=24]
[ext_resource path="res://Game/Creator/Textures/Icons/SolidBlockIcon.png" type="Texture" id=25]
[ext_resource path="res://Game/Creator/Textures/Icons/SpikeBallIcon.png" type="Texture" id=26]
[ext_resource path="res://Game/Creator/Textures/Icons/GardenTilesetIcon.png" type="Texture" id=27]
[ext_resource path="res://Game/Creator/Textures/Icons/OnewayIcon.png" type="Texture" id=28]
[ext_resource path="res://Game/Creator/Textures/Icons/DoorIcon.png" type="Texture" id=29]
[ext_resource path="res://Game/Creator/Textures/Icons/StickyIcon.png" type="Texture" id=30]
[ext_resource path="res://Game/Creator/Creator.gd" type="Script" id=31]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/ItemBox.png-f304998109e9f545116d5501e3378b67.stex"

[node name="Map" index="0" instance=ExtResource( 1 )]
script = ExtResource( 31 )

[node name="Grid" type="Sprite" parent="." index="0"]
position = Vector2( 256, 144 )
texture = ExtResource( 19 )

[node name="Map" parent="." index="3"]
tile_data = PoolIntArray( 720903, 13, 0, 720904, 13, 1, 720905, 13, 1, 720906, 13, 1, 720907, 13, 1, 720908, 13, 1, 720909, 13, 1, 720910, 13, 1, 720911, 13, 1, 720912, 13, 1, 720913, 13, 1, 720914, 13, 1, 720915, 13, 1, 720916, 13, 1, 720917, 13, 1, 720918, 13, 1, 720919, 13, 1, 720920, 13, 1, 720921, 13, 2, 786439, 13, 131072, 786440, 13, 131073, 786441, 13, 131073, 786442, 13, 131073, 786443, 13, 131073, 786444, 13, 131073, 786445, 13, 131073, 786446, 13, 131073, 786447, 13, 131073, 786448, 13, 131073, 786449, 13, 131073, 786450, 13, 131073, 786451, 13, 131073, 786452, 13, 131073, 786453, 13, 131073, 786454, 13, 131073, 786455, 13, 131073, 786456, 13, 131073, 786457, 13, 131074 )

[node name="FlagEnd" parent="." index="4"]
position = Vector2( 384, 176 )

[node name="FlagStart" parent="." index="5"]
position = Vector2( 128, 176 )

[node name="GUI" type="Control" parent="." index="9"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Control" parent="GUI" index="0"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="GUI/TopBar" index="0"]
margin_left = 7.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 37.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TextureButton" parent="GUI/TopBar" index="1"]
margin_left = 473.0
margin_top = 5.0
margin_right = 505.0
margin_bottom = 37.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="TextureButton" parent="GUI/TopBar" index="2"]
margin_left = 441.0
margin_top = 9.0
margin_right = 465.0
margin_bottom = 33.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedoButton" type="TextureButton" parent="GUI/TopBar" index="3"]
margin_left = 412.0
margin_top = 9.0
margin_right = 436.0
margin_bottom = 33.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="TextureButton" parent="GUI/TopBar" index="4"]
margin_left = 382.0
margin_top = 9.0
margin_right = 406.0
margin_bottom = 33.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToEndButton" type="TextureButton" parent="GUI/TopBar" index="5"]
margin_left = 354.0
margin_top = 9.0
margin_right = 378.0
margin_bottom = 33.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToStartButton" type="TextureButton" parent="GUI/TopBar" index="6"]
margin_left = 326.0
margin_top = 9.0
margin_right = 350.0
margin_bottom = 33.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsBar-1png (2)" type="Sprite" parent="GUI" index="1"]
position = Vector2( 256, 272 )
texture = ExtResource( 10 )

[node name="ItemsBarLeftButton" type="TextureButton" parent="GUI" index="2"]
visible = false
margin_left = 13.0
margin_top = 264.0
margin_right = 29.0
margin_bottom = 280.0
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsBarRightButton" type="TextureButton" parent="GUI" index="3"]
visible = false
margin_left = 481.0
margin_top = 264.0
margin_right = 497.0
margin_bottom = 280.0
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Control" parent="GUI" index="4"]
margin_left = 7.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemButton" type="TextureButton" parent="GUI/Items" index="0"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 93.0
margin_top = 256.0
margin_right = 110.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton" index="0"]
position = Vector2( 11, 11 )
texture = ExtResource( 27 )

[node name="ItemButton2" type="TextureButton" parent="GUI/Items" index="1"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 120.0
margin_top = 256.0
margin_right = 137.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton2" index="0"]
position = Vector2( 11, 11 )
texture = ExtResource( 20 )

[node name="ItemButton3" type="TextureButton" parent="GUI/Items" index="2"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 147.0
margin_top = 256.0
margin_right = 164.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton3" index="0"]
position = Vector2( 11, 11 )
texture = ExtResource( 13 )

[node name="ItemButton4" type="TextureButton" parent="GUI/Items" index="3"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 174.0
margin_top = 256.0
margin_right = 191.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton4" index="0"]
position = Vector2( 11, 11 )
scale = Vector2( 0.791667, 0.791667 )
texture = ExtResource( 21 )

[node name="ItemButton5" type="TextureButton" parent="GUI/Items" index="4"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 201.0
margin_top = 256.0
margin_right = 218.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton5" index="0"]
position = Vector2( 11, 11 )
texture = ExtResource( 25 )

[node name="ItemButton6" type="TextureButton" parent="GUI/Items" index="5"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 229.0
margin_top = 256.0
margin_right = 246.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton6" index="0"]
position = Vector2( 11, 11 )
scale = Vector2( 0.714286, 0.714286 )
texture = ExtResource( 26 )

[node name="ItemButton7" type="TextureButton" parent="GUI/Items" index="6"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 257.0
margin_top = 256.0
margin_right = 274.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton7" index="0"]
position = Vector2( 11, 11 )
texture = ExtResource( 22 )

[node name="ItemButton8" type="TextureButton" parent="GUI/Items" index="7"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 285.0
margin_top = 256.0
margin_right = 302.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton8" index="0"]
position = Vector2( 11, 7 )
scale = Vector2( 0.642857, 0.642857 )
texture = ExtResource( 23 )

[node name="ItemButton9" type="TextureButton" parent="GUI/Items" index="8"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 313.0
margin_top = 256.0
margin_right = 330.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton9" index="0"]
position = Vector2( 11, 11 )
scale = Vector2( 0.874999, 0.874999 )
texture = ExtResource( 24 )

[node name="ItemButton10" type="TextureButton" parent="GUI/Items" index="9"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 341.0
margin_top = 256.0
margin_right = 358.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton10" index="0"]
position = Vector2( 11, 11 )
texture = ExtResource( 30 )

[node name="ItemButton11" type="TextureButton" parent="GUI/Items" index="10"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 369.0
margin_top = 256.0
margin_right = 386.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton11" index="0"]
position = Vector2( 11, 11 )
texture = ExtResource( 28 )

[node name="ItemButton12" type="TextureButton" parent="GUI/Items" index="11"]
anchor_right = 0.15
anchor_bottom = 0.15
margin_left = 398.0
margin_top = 256.0
margin_right = 415.2
margin_bottom = 273.2
texture_normal = SubResource( 1 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="GUI/Items/ItemButton12" index="0"]
position = Vector2( 11, 11 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 29 )

[node name="Icons" type="Node2D" parent="." index="10"]

[node name="KeyKeyboardCancel" type="Sprite" parent="Icons" index="0"]
visible = false
position = Vector2( 60, 264 )
texture = ExtResource( 4 )

[node name="Sprite" parent="ParallaxSlot/ParallaxBackground/Background" index="0"]
texture = ExtResource( 18 )

[node name="Background2" parent="ParallaxSlot/ParallaxBackground" index="1"]
visible = true

[node name="Sprite" parent="ParallaxSlot/ParallaxBackground/Background2" index="0"]
texture = ExtResource( 16 )

[node name="Background3" parent="ParallaxSlot/ParallaxBackground" index="2"]
visible = true

[node name="Sprite" parent="ParallaxSlot/ParallaxBackground/Background3" index="0"]
texture = ExtResource( 17 )
[connection signal="tree_exited" from="." to="." method="_on_Map_tree_exited"]
